# bouncy-ball

./: CMakeLists.txt  LICENSE  README.md  main.c
.github/workflows/: cmake-multi-platform.yml
