cmake_minimum_required(VERSION 3.10)
project(BouncyBall VERSION 1.0)
set(CMAKE_C_STANDARD 99)
set(CMAKE_C_STANDARD_REQUIRED True)
find_package(SDL2 REQUIRED)
set(SOURCES src/main.c)
add_executable(bouncy-ball ${SOURCES})
target_include_directories(bouncy-ball PRIVATE ${SDL2_INCLUDE_DIRS})
target_link_libraries(bouncy-ball PRIVATE ${SDL2_LIBRARIES})
